--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
     "require": {},
     "autoload":{
         "psr-4": {"Avir\\":"src/"}
+    },
+    "require-dev": {
+        "phpunit/phpunit": "6"
     }
 }
