--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,18 @@
             "email": "serega12101983@gmail.com"
         }
     ],
-    "require": {
-        "symfony/yaml": "^3.4"
-    },
     "autoload":{
         "psr-4": {"Avir\\":"src/"}
     },
     "autoload-dev":{
         "psr-4":{"Tests\\":"tests/"}
     },
+    "require": {
+        "php" : "^7.0",
+        "symfony/yaml": "^4.0",
+        "kolserdav/dbconnect": "^0.1.0"
+    },
     "require-dev": {
-        "phpunit/phpunit": "6"
+        "phpunit/phpunit": "^7.0"
     }
 }
