--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php" : "^7.0",
         "symfony/yaml": "^4.0",
-        "kolserdav/dbconnect": "^0.1.0"
+        "kolserdav/dbconnect": "^0.1.1-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
