--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "php" : "^7.0",
         "symfony/yaml": "^4.0",
         "kolserdav/dbconnect": "^2.0.5",
-        "kolserdav/router": "^0.0.8",
-        "twig/twig": "~2.0"
+        "kolserdav/router": "^0.1.0",
+        "kolserdav/templater": "^1.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
