--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 AddCharset UTF-8 .html .php
-RewriteCond %{REQUEST_URI} !^.*\.(html|appcache|jpg|css|js|gif|png)$ [NC]
+RewriteCond %{REQUEST_URI} !^.*\.(json|html|appcache|jpg|css|js|gif|png)$ [NC]
 RewriteRule .* index.php [L]
 
 
