--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "symfony/yaml": "^4.0",
         "kolserdav/dbconnect": "^2.0.5",
         "kolserdav/router": "^0.2.0",
-        "kolserdav/templater": "^2.0.5"
+        "kolserdav/templater": "^2.0.5",
+        "kolserdav/routejs": "^0.0.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
