--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
   "dependencies": {
     "ajaxsim": "^1.0.0",
     "dist-cookie": "0.0.3",
-    "node-sass": "^4.8.3",
-    "pseudo-name": "0.0.4"
+    "node-sass": "^4.9.0",
+    "pseudo-name": "0.0.4",
+    "route-fhash": "0.0.4"
   },
   "devDependencies": {
     "@webpack-contrib/schema-utils": "^1.0.0-beta.0",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack": "^4.10.2",
+    "webpack-cli": "^2.1.4"
   }
 }
